添加获取token info; pairinfo功能
