# docs/swagger.yaml
@@ -34,6 +34,27 @@ definitions:
         description: 钱包地址
         type: string
     type: object
+  services.PairInfo:
+    properties:
+      block:
+        type: integer
+      liquidityTokenTotalSupply:
+        description: lp数量
+        type: string
+      reserve0:
+        type: string
+      reserve1:
+        type: string
+      reserveUSD:
+        description: pair市值
+        type: string
+      timestamp:
+        type: integer
+      token0PriceUSD:
+        type: string
+      token1PriceUSD:
+        type: string
+    type: object
   services.StockData:
     properties:
       Price:
@@ -78,6 +99,29 @@ definitions:
           type: integer
         type: array
     type: object
+  services.TokenInfo:
+    properties:
+      decimals:
+        type: string
+      derivedETH:
+        type: string
+      name:
+        type: string
+      symbol:
+        type: string
+      totalLiquidity:
+        type: string
+      totalSupply:
+        type: string
+      tradeVolume:
+        type: string
+      tradeVolumeUSD:
+        type: string
+      txCount:
+        type: string
+      untrackedVolumeUSD:
+        type: string
+    type: object
 info:
   contact:
     email: wuxiaofei@rechaintech.com
@@ -90,6 +134,78 @@ info:
   title: stock-info-api
   version: "1.0"
 paths:
+  /pub/dex/pair_info/{pair}/{timestamp}:
+    get:
+      consumes:
+      - application/json
+      description: 获取pair信息,含pair的lp Token内容
+      operationId: PairInfoHandler
+      parameters:
+      - default: 0x21b8065d10f73ee2e260e5b47d3344d3ced7596e
+        description: pair地址
+        in: path
+        name: pair
+        required: true
+        type: string
+      - default: 1620383144
+        description: 当前时间的unix秒数,该字段未使用，仅在云存储上用于标识
+        in: path
+        name: timestamp
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: stock info
+          headers:
+            sign:
+              description: 签名信息
+              type: string
+          schema:
+            $ref: '#/definitions/services.PairInfo'
+        "500":
+          description: 失败时，有相应测试日志输出
+          schema:
+            $ref: '#/definitions/main.ApiErr'
+      summary: '获取pair信息:'
+      tags:
+      - default
+  /pub/dex/token_info/{token}/{timestamp}:
+    get:
+      consumes:
+      - application/json
+      description: 获取token信息,含pair的lp Token内容
+      operationId: TokenInfoHandler
+      parameters:
+      - default: 0x66a0f676479cee1d7373f3dc2e2952778bff5bd6
+        description: token地址
+        in: path
+        name: token
+        required: true
+        type: string
+      - default: 1620383144
+        description: 当前时间的unix秒数,该字段未使用，仅在云存储上用于标识
+        in: path
+        name: timestamp
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: stock info
+          headers:
+            sign:
+              description: 签名信息
+              type: string
+          schema:
+            $ref: '#/definitions/services.TokenInfo'
+        "500":
+          description: 失败时，有相应测试日志输出
+          schema:
+            $ref: '#/definitions/main.ApiErr'
+      summary: '获取token信息:'
+      tags:
+      - default
   /pub/stock/aggre_info/{code}/{timestamp}:
     get:
       consumes:
